--- a/Dt-Money/package.json
+++ b/Dt-Money/package.json
@@ -15,7 +15,6 @@
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-radio-group": "^1.1.0",
-    "@rocketseat/eslint-config": "^1.1.3",
     "axios": "^1.1.3",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -25,10 +24,12 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.26.0",
     "json-server": "^0.17.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.0"
